Added Spring Boot authentication filter.